<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_reset"
        android:title="@string/reset"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"/>

    <item
        android:id="@+id/action_clear_all"
        android:title="@string/clear_all"
        app:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>

</menu>