<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OrderActivity"
    tools:showIn="@layout/activity_order"
    android:background="@drawable/background4">

    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="50sp"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details"
        android:text="@string/fruit_name"
        android:textSize="30sp"
        android:layout_marginTop="40sp" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_quantity"
        android:textSize="30sp"
        android:layout_below="@id/name_text_view"/>

    <TextView
        android:id="@+id/delivery_date_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_date"
        android:layout_below="@id/quantity_text_view"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/delivery_date_text_view"
        android:layout_marginTop="80sp"
        android:layout_alignRight="@id/delivery_date_text_view"
        android:layout_marginRight="50sp"
        android:layout_marginEnd="50sp"
        android:text="@string/back"
        android:onClick="pressedBack"/>

</RelativeLayout>