<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_buy"/>
<!--
    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fruit_name"
        android:inputType="textCapSentences"/>
-->
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/apple_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="apple"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/banana_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="banana" />

        <RadioButton
            android:id="@+id/hamimelon_radio_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="hamimelon" />

    </RadioGroup>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quantity"/>

    <EditText
        android:id="@+id/quantity_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/_7"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_delivery_date"/>

    <CalendarView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>