<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="italic|bold"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:layout_marginTop="10sp" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/slogan"
        android:layout_marginTop="160sp"
        android:text="@string/skip"
        android:layout_centerHorizontal="true"
        android:onClick="pressedSkip"/>

</RelativeLayout>